--- a/decisionTree.ipynb
+++ b/decisionTree.ipynb
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8959537572254336"
+       "0.8988439306358381"
       ]
      },
      "execution_count": 7,
@@ -339,6 +339,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now try to address one of the main problems when using DTs, that is overfitting. In fact is common for such models to learn on the noise and small variations in the data, if hyper-paramethers are not carefully tuned. \n",
+    "\n",
+    "A solution to this is to use Random Forests (RF). RF is an **ensamble learning** method that operates by constructing multiple decision trees. Many decision trees are constructed applying the general technique of bootstrapping.\n",
+    "\n",
+    "More formally if we have a training set $X = x_1, ..., x_n$ and the labels associated $Y = y_1, ...,y_n$ we **Bag** (Sample with replacment) from $\\{X,Y\\}$ $ B $ times and train a decision tree on this sample. We then in case of classification take the majority of votes from all the $B$ predictions as the final output of the RF model.\n",
+    "\n",
+    "Bootstrapping so help us solve the issue of overfitting. A step further in this direction would be modify the DT algorithm slightly, by looking at each step to only a portion of the features to find the best possible split. This not only improve the overall model accuracy and speed but also provide a further guard against overfitting. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from RandomForest.randomForest import Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the first question is how many trees should build ? As there is no universal answer the best way to find out this hyperparameter is to use some model selection techniques. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'numpy.ndarray' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\benjamin.barda\\Documents\\GitHub\\spotyCARLO\\decisionTree.ipynb Cella 19\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/benjamin.barda/Documents/GitHub/spotyCARLO/decisionTree.ipynb#ch0000033?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m model \u001b[39min\u001b[39;00m models : \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/benjamin.barda/Documents/GitHub/spotyCARLO/decisionTree.ipynb#ch0000033?line=3'>4</a>\u001b[0m     model\u001b[39m.\u001b[39mfit(x_train, y_train)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/benjamin.barda/Documents/GitHub/spotyCARLO/decisionTree.ipynb#ch0000033?line=4'>5</a>\u001b[0m     score[model\u001b[39m.\u001b[39mget_max_trees] \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mscore(x_test, y_test)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/benjamin.barda/Documents/GitHub/spotyCARLO/decisionTree.ipynb#ch0000033?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mmodel\u001b[39m.\u001b[39mget_max_trees()\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m, end \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m\\r\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\benjamin.barda\\Documents\\GitHub\\spotyCARLO\\RandomForest\\randomForest.py:54\u001b[0m, in \u001b[0;36mForest.score\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mscore\u001b[39m(\u001b[39mself\u001b[39m, X, y): \n\u001b[1;32m---> 54\u001b[0m     preds \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpredict(X)\n\u001b[0;32m     56\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msum\u001b[39m(preds \u001b[39m==\u001b[39m y) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(preds)\n",
+      "File \u001b[1;32mc:\\Users\\benjamin.barda\\Documents\\GitHub\\spotyCARLO\\RandomForest\\randomForest.py:43\u001b[0m, in \u001b[0;36mForest.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     40\u001b[0m preds \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mB, \u001b[39mlen\u001b[39m(X)), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mint64)\n\u001b[0;32m     42\u001b[0m \u001b[39mfor\u001b[39;00m b,tree \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mforest) :\n\u001b[1;32m---> 43\u001b[0m     pred \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(tree\u001b[39m.\u001b[39;49mpredict(X), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mint8)\n\u001b[0;32m     44\u001b[0m     preds[b, :] \u001b[39m=\u001b[39m pred\n\u001b[0;32m     47\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(X)) : \n",
+      "File \u001b[1;32mc:\\Users\\benjamin.barda\\Documents\\GitHub\\spotyCARLO\\DecisionTree\\tree.py:196\u001b[0m, in \u001b[0;36mTree.predict\u001b[1;34m(self, X, trgt)\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpredict\u001b[39m(\u001b[39mself\u001b[39m, X, trgt \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) :\n\u001b[0;32m    188\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    189\u001b[0m \u001b[39m    Bulk prediction \u001b[39;00m\n\u001b[0;32m    190\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    194\u001b[0m \u001b[39m        {list} predictions : list of predictions on X\u001b[39;00m\n\u001b[0;32m    195\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m \n\u001b[1;32m--> 196\u001b[0m     predictions \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_traverse(x, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mroot) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m X]\n\u001b[0;32m    198\u001b[0m     \u001b[39mif\u001b[39;00m trgt \u001b[39m!=\u001b[39m \u001b[39mNone\u001b[39;00m : \n\u001b[0;32m    199\u001b[0m         \u001b[39massert\u001b[39;00m trgt\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(predictions) \n",
+      "File \u001b[1;32mc:\\Users\\benjamin.barda\\Documents\\GitHub\\spotyCARLO\\DecisionTree\\tree.py:196\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpredict\u001b[39m(\u001b[39mself\u001b[39m, X, trgt \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) :\n\u001b[0;32m    188\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    189\u001b[0m \u001b[39m    Bulk prediction \u001b[39;00m\n\u001b[0;32m    190\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    194\u001b[0m \u001b[39m        {list} predictions : list of predictions on X\u001b[39;00m\n\u001b[0;32m    195\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m \n\u001b[1;32m--> 196\u001b[0m     predictions \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_traverse(x, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mroot) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m X]\n\u001b[0;32m    198\u001b[0m     \u001b[39mif\u001b[39;00m trgt \u001b[39m!=\u001b[39m \u001b[39mNone\u001b[39;00m : \n\u001b[0;32m    199\u001b[0m         \u001b[39massert\u001b[39;00m trgt\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(predictions) \n",
+      "File \u001b[1;32mc:\\Users\\benjamin.barda\\Documents\\GitHub\\spotyCARLO\\DecisionTree\\tree.py:183\u001b[0m, in \u001b[0;36mTree._traverse\u001b[1;34m(self, x, node)\u001b[0m\n\u001b[0;32m    180\u001b[0m \u001b[39mif\u001b[39;00m node\u001b[39m.\u001b[39mis_leaf():\n\u001b[0;32m    181\u001b[0m     \u001b[39mreturn\u001b[39;00m node\u001b[39m.\u001b[39mvalue\n\u001b[1;32m--> 183\u001b[0m \u001b[39mif\u001b[39;00m x[node\u001b[39m.\u001b[39;49mfeature] \u001b[39m<\u001b[39;49m\u001b[39m=\u001b[39;49m node\u001b[39m.\u001b[39;49mthresh:\n\u001b[0;32m    184\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_traverse(x, node\u001b[39m.\u001b[39mleft)\n\u001b[0;32m    185\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_traverse(x, node\u001b[39m.\u001b[39mright)\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'numpy.ndarray' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "models = [Forest(max_trees=x) for x in range(3,32+1)]\n",
+    "score = {}\n",
+    "for model in models : \n",
+    "    model.fit(x_train.to_numpy(), y_train.to_numpy())\n",
+    "    score[model.get_max_trees] = model.score(x_test.to_numpy(), y_test.to_numpy())\n",
+    "    print(f\"{model.get_max_trees()}\", end = '\\r')\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -348,7 +410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -362,12 +424,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "949ca02c6f6c8e46594f49d827909bb6cc1f655ba57a65a49f724deda5e66916"
    }
   }
  },
