--- a/histplots.ipynb
+++ b/histplots.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.034071225988112075\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -26,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,13 +226,13 @@
        "2         NaN  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dF = pd.read_csv('data//csvs/Top50_clean.csv',index_col=0).drop(['id','uri'],axis=1)\n",
+    "dF = pd.read_csv('data//csvs/Top50_clean.csv',index_col=0).drop(['id','uri','artist_followers'],axis=1)\n",
     "dF['duration_ms'] = dF['duration_ms']/1000\n",
     "feat = ['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'duration_ms', 'tempo', 'time_signature']\n",
     "_, ax = plt.subplots(ncols=len(feat), nrows=1,figsize = (40,2.5)) \n",
@@ -255,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.15964138119436166\n"
+      "0.1687518001671231\n"
      ]
     }
    ],
@@ -271,7 +263,8 @@
     "dF1 = pd.read_csv('data//csvs/Top50_clean.csv',index_col=0).drop(['id','uri'],axis=1)\n",
     "dF2 = pd.read_csv('data\\csvs\\dataframeV2.csv',index_col=0).drop(['id','uri','label'],axis=1)\n",
     "dF = pd.concat([dF1,dF2])\n",
-    "X = dF.drop('popularity',axis=1)\n",
+    "dFF = dF.copy()\n",
+    "X = dF.drop(['popularity'],axis=1)\n",
     "Y = dF['popularity']\n",
     "LR.fit(X,Y)\n",
     "print(LR.R_squared)"
@@ -279,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6309751434034416\n"
+      "0.6805555555555556\n"
      ]
     }
    ],
@@ -299,11 +292,50 @@
     "dF['Y'] = dF.popularity.cat.codes\n",
     "X = dF.drop(['Y','popularity'],axis=1)\n",
     "y = dF.Y\n",
-    "x_train, x_test, y_train, y_test = train_test_split(X, y,  train_size=.8)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y,  train_size=.78)\n",
     "f = Forest(32, max_depth=5) \n",
     "f.fit(x_train, y_train)\n",
     "p = f.predict(x_test.to_numpy())\n",
     "print(sum(p == y_test) / len(y_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6197916666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "dF = dFF\n",
+    "dF['popularity'] = pd.cut(dF.popularity,bins=3)\n",
+    "y = dF[['popularity']].to_numpy().ravel()\n",
+    "x = dF.drop(['popularity'],axis=1)\n",
+    "\n",
+    "ly = LabelEncoder()\n",
+    "y = ly.fit_transform(y)\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.22)\n",
+    "\n",
+    "\n",
+    "logreg = LogisticRegression(solver = 'newton-cg',multi_class='auto',max_iter=100000,n_jobs=-1)\n",
+    "logreg.fit(x_train,y_train)\n",
+    "\n",
+    "y_pred = logreg.predict(x_test)\n",
+    "\n",
+    "acc1 = accuracy_score(y_test,y_pred)\n",
+    "print(acc1)"
    ]
   }
  ],
