--- a/data/dataGather.ipynb
+++ b/data/dataGather.ipynb
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\anaconda3\\lib\\site-packages\\_distutils_hack\\__init__.py:30: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    }
+   ],
    "source": [
     "import pip \n",
     "import os\n",
@@ -45,11 +54,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 7,
->>>>>>> fec13efe1786731296f7ca110f64319a8137b550
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +105,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 14,
-=======
-   "execution_count": 4,
->>>>>>> fec13efe1786731296f7ca110f64319a8137b550
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,11 +152,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 8,
->>>>>>> fec13efe1786731296f7ca110f64319a8137b550
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,23 +260,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dF = pd.read_csv('.\\csvs\\Top50_clean.csv', index_col=0)\n",
+    "dF = pd.read_csv('.\\csvs\\---Top50_clean.csv', index_col=0)\n",
     "\n",
     "def addPop(id):\n",
     "    return spotyCarlo.track(id)['popularity']\n",
     "\n",
     "dF.insert(15,'popularity',np.array(list(map(addPop,dF.iloc[:,11]))))\n",
-    "dF.to_csv('.\\csvs\\Top50_clean.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dF = pd.read_csv('.\\csvs\\dataframeV2.csv', index_col=0)\n",
-    "dF.head()"
+    "dF.to_csv('.\\csvs\\---Top50_clean.csv')\n"
    ]
   },
   {
@@ -288,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dF = pd.read_csv('.\\csvs\\dataframeV2.csv', index_col=0)\n",
+    "dF = pd.read_csv('.\\csvs\\data----.csv', index_col=0)\n",
     "def addFollwers(id):\n",
     "    ArtId = spotyCarlo.track(id)['artists'][0]['id']\n",
     "    return spotyCarlo.artist(ArtId)['followers']['total']\n",
@@ -297,17 +284,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>id</th>\n",
+       "      <th>uri</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>label</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>artist_followers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.2750</td>\n",
+       "      <td>0.1570</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-18.752</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0636</td>\n",
+       "      <td>0.890</td>\n",
+       "      <td>0.842</td>\n",
+       "      <td>0.186</td>\n",
+       "      <td>0.3040</td>\n",
+       "      <td>73.289</td>\n",
+       "      <td>17i5jLpzndlQhbS4SrTd0B</td>\n",
+       "      <td>spotify:track:17i5jLpzndlQhbS4SrTd0B</td>\n",
+       "      <td>152280</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3708649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.2210</td>\n",
+       "      <td>0.1260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-25.427</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0447</td>\n",
+       "      <td>0.989</td>\n",
+       "      <td>0.897</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>0.2160</td>\n",
+       "      <td>133.630</td>\n",
+       "      <td>4SFBV7SRNG2e2kyL1F6kjU</td>\n",
+       "      <td>spotify:track:4SFBV7SRNG2e2kyL1F6kjU</td>\n",
+       "      <td>139307</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3708649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.2890</td>\n",
+       "      <td>0.0306</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-30.790</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0446</td>\n",
+       "      <td>0.987</td>\n",
+       "      <td>0.911</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>0.1180</td>\n",
+       "      <td>125.610</td>\n",
+       "      <td>3zLTPuucd3e6TxZnu2dlVS</td>\n",
+       "      <td>spotify:track:3zLTPuucd3e6TxZnu2dlVS</td>\n",
+       "      <td>212067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4484125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0753</td>\n",
+       "      <td>0.0700</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-27.272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0440</td>\n",
+       "      <td>0.918</td>\n",
+       "      <td>0.947</td>\n",
+       "      <td>0.146</td>\n",
+       "      <td>0.0625</td>\n",
+       "      <td>79.801</td>\n",
+       "      <td>7h6GoPvGHC9uzZJ8bNvfIq</td>\n",
+       "      <td>spotify:track:7h6GoPvGHC9uzZJ8bNvfIq</td>\n",
+       "      <td>365147</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>56</td>\n",
+       "      <td>3708649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.1300</td>\n",
+       "      <td>0.1580</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-16.132</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0350</td>\n",
+       "      <td>0.748</td>\n",
+       "      <td>0.924</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.0998</td>\n",
+       "      <td>85.031</td>\n",
+       "      <td>5x3TUfYzgZIdt0Kaop64ss</td>\n",
+       "      <td>spotify:track:5x3TUfYzgZIdt0Kaop64ss</td>\n",
+       "      <td>302093</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134606</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+       "0        0.2750  0.1570    7   -18.752     1       0.0636         0.890   \n",
+       "1        0.2210  0.1260    0   -25.427     1       0.0447         0.989   \n",
+       "2        0.2890  0.0306    9   -30.790     0       0.0446         0.987   \n",
+       "3        0.0753  0.0700    2   -27.272     1       0.0440         0.918   \n",
+       "4        0.1300  0.1580    2   -16.132     1       0.0350         0.748   \n",
+       "\n",
+       "   instrumentalness  liveness  valence    tempo                      id  \\\n",
+       "0             0.842     0.186   0.3040   73.289  17i5jLpzndlQhbS4SrTd0B   \n",
+       "1             0.897     0.102   0.2160  133.630  4SFBV7SRNG2e2kyL1F6kjU   \n",
+       "2             0.911     0.102   0.1180  125.610  3zLTPuucd3e6TxZnu2dlVS   \n",
+       "3             0.947     0.146   0.0625   79.801  7h6GoPvGHC9uzZJ8bNvfIq   \n",
+       "4             0.924     0.100   0.0998   85.031  5x3TUfYzgZIdt0Kaop64ss   \n",
+       "\n",
+       "                                    uri  duration_ms  time_signature    label  \\\n",
+       "0  spotify:track:17i5jLpzndlQhbS4SrTd0B       152280               4  classic   \n",
+       "1  spotify:track:4SFBV7SRNG2e2kyL1F6kjU       139307               4  classic   \n",
+       "2  spotify:track:3zLTPuucd3e6TxZnu2dlVS       212067               3  classic   \n",
+       "3  spotify:track:7h6GoPvGHC9uzZJ8bNvfIq       365147               4  classic   \n",
+       "4  spotify:track:5x3TUfYzgZIdt0Kaop64ss       302093               4  classic   \n",
+       "\n",
+       "   popularity  artist_followers  \n",
+       "0          67           3708649  \n",
+       "1          60           3708649  \n",
+       "2          60           4484125  \n",
+       "3          56           3708649  \n",
+       "4           0            134606  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dF.to_csv('.\\csvs\\dataframeV2.csv')"
+    "dF = pd.read_csv('.\\csvs\\dataframeV2.csv',index_col=0)\n",
+    "dF.head()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -321,12 +495,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "949ca02c6f6c8e46594f49d827909bb6cc1f655ba57a65a49f724deda5e66916"
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
    }
   }
  },
