--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -459,8 +459,7 @@
     "        f.close()\n",
     "    with open('cv_time_res.csv', 'w') as f: \n",
     "        time_df.to_csv(f)\n",
-    "        f.close()\n",
-    "\n"
+    "        f.close()"
    ]
   },
   {
@@ -786,6 +785,13 @@
     "plt.ylabel(\"Time(s)\") \n",
     "plt.show()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we can see that the best performing model is the one with 13 Trees at a depth of 3."
    ]
   },
   {
