--- a/histplots.ipynb
+++ b/histplots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "2         NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,13 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(2614, 15)\n",
       "0.1687518001671231\n"
      ]
     }
@@ -266,6 +267,7 @@
     "dF2 = pd.read_csv('data\\csvs\\dataframeV2.csv',index_col=0).drop(['id','uri','label'],axis=1)\n",
     "dF = pd.concat([dF1,dF2])\n",
     "dFF = dF.copy()\n",
+    "print(dFF.shape)\n",
     "X = dF.drop(['popularity'],axis=1)\n",
     "Y = dF['popularity']\n",
     "LR.fit(X,Y)\n",
@@ -274,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6684027777777778\n"
+      "0.6354166666666666\n"
      ]
     }
    ],
@@ -295,7 +297,7 @@
     "X = dF.drop(['Y','popularity'],axis=1)\n",
     "y = dF.Y\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, y,  train_size=.78)\n",
-    "f = Forest(32, max_depth=5) \n",
+    "f = Forest(13, max_depth=3) \n",
     "f.fit(x_train, y_train)\n",
     "p = f.predict(x_test.to_numpy())\n",
     "print(sum(p == y_test) / len(y_test))\n"
@@ -303,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6423611111111112\n"
+      "0.625\n"
      ]
     }
    ],
@@ -343,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -357,12 +359,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "379ef13cdaaa3488d0d0ee4a3d00b9f61dd7f8c251b8a40c38fb20881b24658a"
    }
   }
  },
