--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +94,13 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -142,88 +143,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.554</td>\n",
-       "      <td>0.899</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-4.573</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.4080</td>\n",
-       "      <td>0.05210</td>\n",
+       "      <td>0.577</td>\n",
+       "      <td>0.5770</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-10.053</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.4900</td>\n",
+       "      <td>0.151000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.0568</td>\n",
-       "      <td>0.5520</td>\n",
-       "      <td>171.966</td>\n",
-       "      <td>227893</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0.130</td>\n",
+       "      <td>0.4210</td>\n",
+       "      <td>118.837</td>\n",
+       "      <td>215000</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.106</td>\n",
-       "      <td>0.227</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-15.286</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0462</td>\n",
-       "      <td>0.87700</td>\n",
-       "      <td>0.738000</td>\n",
-       "      <td>0.1120</td>\n",
-       "      <td>0.0391</td>\n",
-       "      <td>59.940</td>\n",
-       "      <td>530280</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0.394</td>\n",
+       "      <td>0.9240</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-4.786</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0549</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>0.000071</td>\n",
+       "      <td>0.319</td>\n",
+       "      <td>0.5610</td>\n",
+       "      <td>174.796</td>\n",
+       "      <td>248133</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.530</td>\n",
-       "      <td>0.143</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-17.471</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0423</td>\n",
-       "      <td>0.95800</td>\n",
-       "      <td>0.497000</td>\n",
-       "      <td>0.2780</td>\n",
-       "      <td>0.1190</td>\n",
-       "      <td>125.464</td>\n",
-       "      <td>442227</td>\n",
+       "      <td>0.276</td>\n",
+       "      <td>0.9860</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-10.221</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1220</td>\n",
+       "      <td>0.000633</td>\n",
+       "      <td>0.004390</td>\n",
+       "      <td>0.349</td>\n",
+       "      <td>0.0621</td>\n",
+       "      <td>153.640</td>\n",
+       "      <td>229960</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.337</td>\n",
-       "      <td>0.209</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-16.656</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0314</td>\n",
-       "      <td>0.93500</td>\n",
-       "      <td>0.865000</td>\n",
-       "      <td>0.1110</td>\n",
-       "      <td>0.1400</td>\n",
-       "      <td>89.158</td>\n",
-       "      <td>185685</td>\n",
+       "      <td>0.286</td>\n",
+       "      <td>0.0028</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-37.427</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0462</td>\n",
+       "      <td>0.995000</td>\n",
+       "      <td>0.912000</td>\n",
+       "      <td>0.127</td>\n",
+       "      <td>0.1230</td>\n",
+       "      <td>67.505</td>\n",
+       "      <td>324960</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.402</td>\n",
-       "      <td>0.873</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-3.209</td>\n",
+       "      <td>0.380</td>\n",
+       "      <td>0.1640</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-14.690</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0586</td>\n",
-       "      <td>0.00484</td>\n",
-       "      <td>0.000073</td>\n",
-       "      <td>0.1570</td>\n",
-       "      <td>0.6840</td>\n",
-       "      <td>125.443</td>\n",
-       "      <td>253667</td>\n",
+       "      <td>0.0452</td>\n",
+       "      <td>0.985000</td>\n",
+       "      <td>0.955000</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.0871</td>\n",
+       "      <td>79.030</td>\n",
+       "      <td>202640</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -231,28 +232,28 @@
       ],
       "text/plain": [
        "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
-       "0         0.554   0.899    8    -4.573     1       0.4080       0.05210   \n",
-       "1         0.106   0.227    3   -15.286     1       0.0462       0.87700   \n",
-       "2         0.530   0.143    8   -17.471     1       0.0423       0.95800   \n",
-       "3         0.337   0.209    2   -16.656     0       0.0314       0.93500   \n",
-       "4         0.402   0.873    4    -3.209     0       0.0586       0.00484   \n",
+       "0         0.577  0.5770    0   -10.053     0       0.4900      0.151000   \n",
+       "1         0.394  0.9240    2    -4.786     0       0.0549      0.000025   \n",
+       "2         0.276  0.9860    9   -10.221     0       0.1220      0.000633   \n",
+       "3         0.286  0.0028    8   -37.427     1       0.0462      0.995000   \n",
+       "4         0.380  0.1640    7   -14.690     0       0.0452      0.985000   \n",
        "\n",
        "   instrumentalness  liveness  valence    tempo  duration_ms  time_signature  \\\n",
-       "0          0.000000    0.0568   0.5520  171.966       227893               4   \n",
-       "1          0.738000    0.1120   0.0391   59.940       530280               4   \n",
-       "2          0.497000    0.2780   0.1190  125.464       442227               4   \n",
-       "3          0.865000    0.1110   0.1400   89.158       185685               4   \n",
-       "4          0.000073    0.1570   0.6840  125.443       253667               4   \n",
+       "0          0.000000     0.130   0.4210  118.837       215000               5   \n",
+       "1          0.000071     0.319   0.5610  174.796       248133               4   \n",
+       "2          0.004390     0.349   0.0621  153.640       229960               4   \n",
+       "3          0.912000     0.127   0.1230   67.505       324960               4   \n",
+       "4          0.955000     0.125   0.0871   79.030       202640               4   \n",
        "\n",
        "   Y  \n",
        "0  3  \n",
-       "1  0  \n",
-       "2  1  \n",
+       "1  2  \n",
+       "2  2  \n",
        "3  0  \n",
-       "4  2  "
+       "4  1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,12 +304,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fit the tree on the train set \n",
     "dT.fit(x_train.to_numpy(), y_train.to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotFittedError",
+     "evalue": "This Tree instance is not fitted yet. Call 'fit' with appropriate arguments before using this estimator.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotFittedError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\benjamin.barda\\Documents\\GitHub\\spotyCARLO\\RandomForest.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/benjamin.barda/Documents/GitHub/spotyCARLO/RandomForest.ipynb#ch0000028?line=0'>1</a>\u001b[0m tree\u001b[39m.\u001b[39;49mplot_tree(dT)\n",
+      "File \u001b[1;32mc:\\Users\\benjamin.barda\\Anaconda3\\lib\\site-packages\\sklearn\\tree\\_export.py:180\u001b[0m, in \u001b[0;36mplot_tree\u001b[1;34m(decision_tree, max_depth, feature_names, class_names, label, filled, impurity, node_ids, proportion, rounded, precision, ax, fontsize)\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mplot_tree\u001b[39m(\n\u001b[0;32m     79\u001b[0m     decision_tree,\n\u001b[0;32m     80\u001b[0m     \u001b[39m*\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     92\u001b[0m     fontsize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m     93\u001b[0m ):\n\u001b[0;32m     94\u001b[0m     \u001b[39m\"\"\"Plot a decision tree.\u001b[39;00m\n\u001b[0;32m     95\u001b[0m \n\u001b[0;32m     96\u001b[0m \u001b[39m    The sample counts that are shown are weighted with any sample_weights that\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    177\u001b[0m \n\u001b[0;32m    178\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 180\u001b[0m     check_is_fitted(decision_tree)\n\u001b[0;32m    182\u001b[0m     exporter \u001b[39m=\u001b[39m _MPLTreeExporter(\n\u001b[0;32m    183\u001b[0m         max_depth\u001b[39m=\u001b[39mmax_depth,\n\u001b[0;32m    184\u001b[0m         feature_names\u001b[39m=\u001b[39mfeature_names,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    193\u001b[0m         fontsize\u001b[39m=\u001b[39mfontsize,\n\u001b[0;32m    194\u001b[0m     )\n\u001b[0;32m    195\u001b[0m     \u001b[39mreturn\u001b[39;00m exporter\u001b[39m.\u001b[39mexport(decision_tree, ax\u001b[39m=\u001b[39max)\n",
+      "File \u001b[1;32mc:\\Users\\benjamin.barda\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:1222\u001b[0m, in \u001b[0;36mcheck_is_fitted\u001b[1;34m(estimator, attributes, msg, all_or_any)\u001b[0m\n\u001b[0;32m   1217\u001b[0m     fitted \u001b[39m=\u001b[39m [\n\u001b[0;32m   1218\u001b[0m         v \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m \u001b[39mvars\u001b[39m(estimator) \u001b[39mif\u001b[39;00m v\u001b[39m.\u001b[39mendswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m v\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m__\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   1219\u001b[0m     ]\n\u001b[0;32m   1221\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m fitted:\n\u001b[1;32m-> 1222\u001b[0m     \u001b[39mraise\u001b[39;00m NotFittedError(msg \u001b[39m%\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mtype\u001b[39m(estimator)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m})\n",
+      "\u001b[1;31mNotFittedError\u001b[0m: This Tree instance is not fitted yet. Call 'fit' with appropriate arguments before using this estimator."
+     ]
+    }
+   ],
+   "source": [
+    "tree.plot_tree(dT)"
    ]
   },
   {
