distance misunderstanding solved

--- a/3-KMeans.ipynb
+++ b/3-KMeans.ipynb
@@ -37,9 +37,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/workspace/spotyCARLO/3-KMeans.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://benjaminbard-spotycarlo-moq5vyarxbd.ws-eu54.gitpod.io/workspace/spotyCARLO/3-KMeans.ipynb#ch0000003vscode-remote?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://benjaminbard-spotycarlo-moq5vyarxbd.ws-eu54.gitpod.io/workspace/spotyCARLO/3-KMeans.ipynb#ch0000003vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mimport\u001b[39;00m linalg \u001b[39mas\u001b[39;00m la\n\u001b[1;32m      <a href='vscode-notebook-cell://benjaminbard-spotycarlo-moq5vyarxbd.ws-eu54.gitpod.io/workspace/spotyCARLO/3-KMeans.ipynb#ch0000003vscode-remote?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy import linalg as la\n",
@@ -777,7 +789,7 @@
     "        return np.argmax([ self.__min_dist(point,centroids ) for point in self.X])\n",
     "        \n",
     "    def __min_dist(self, point, centroids):\n",
-    "        return min( [ self.euclidean_distance(point, centroid) for centroid in centroids] ) \n",
+    "        return min( [ self.euclidean_distance(point, centroid)**2 for centroid in centroids] ) \n",
     "    \n",
     "    ##########################################################################################\n",
     "    # get the how_many_centroids \"centroids\". 1 if k-means++, but k if k-means\n",
@@ -842,7 +854,7 @@
     "    \n",
     "    # arg that minimizes the distance of the current sample to each centroid\n",
     "    def __closest_centroid_label(self, point, centroids):\n",
-    "        return np.argmin( [ self.euclidean_distance(point, centroid) for centroid in centroids] ) \n",
+    "        return np.argmin( [ self.euclidean_distance(point, centroid)**2 for centroid in centroids] ) \n",
     "\n",
     "    # assign mean value of clusters to centroids; Maximisation step\n",
     "    def __centroids_means_of_clusters(self, clusters):\n",
@@ -850,12 +862,12 @@
     "        \n",
     "    # distances between each old and new centroids\n",
     "    def __has_converged(self, old_centroids, current_centroids):\n",
-    "        distances = [self.euclidean_distance(old_centroids[i], current_centroids[i]) for i in range(self.K)]\n",
+    "        distances = [self.euclidean_distance(old_centroids[i], current_centroids[i])**2 for i in range(self.K)]\n",
     "        return sum(distances) == 0\n",
     "    \n",
     "    def euclidean_distance(self, point1, point2):\n",
-    "        dist = la.norm(point1 - point2)\n",
-    "        return np.square(dist)\n"
+    "        return la.norm(point1 - point2)\n",
+    "        \n"
    ]
   },
   {
@@ -1539,7 +1551,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.13 64-bit ('3.8.13')",
    "language": "python",
    "name": "python3"
   },
@@ -1553,12 +1565,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "379ef13cdaaa3488d0d0ee4a3d00b9f61dd7f8c251b8a40c38fb20881b24658a"
+    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
    }
   }
  },
