--- a/FinalNotebook.ipynb
+++ b/FinalNotebook.ipynb
@@ -1575,8 +1575,8 @@
     "        return sum(distances) == 0\n",
     "    \n",
     "    def euclidean_distance(self, point1, point2):\n",
-    "        dist = la.norm(point1 - point2)\n",
-    "        return dist"
+    "        return la.norm(point1 - point2)\n",
+    "        "
    ]
   },
   {
