--- a/FinalNotebook.ipynb
+++ b/FinalNotebook.ipynb
@@ -4419,7 +4419,7 @@
    "metadata": {},
    "source": [
     "A single deterministic Decision Tree pops out an accuracy score of 0.65 circa. So with the model we have a probability to get the label right that is twice as much as randomly choosing among 3 classes (33% if we casually pick one). But it's still not great, i would prefer something around 80-90%, because we have to remember that we have created only 3 categories over a continous range of length 100. For instance if we divide instead the dataset onto 5,10,20 bins we'll see the accuracy dropping very fast. \n",
-    "With the Random Forest we don't see any major improvement, but since this method relies on **Bootstrapping** the result can change a bit over different code runs/random seeds.\n",
+    "With the Random Forest we don't see any major improvement, but since this method relies on *Bootstrapping* the result can change a bit over different code runs/random seeds.\n",
     "\n",
     "The following is the code for the Cross Validation if you want to take a look."
    ]
