delete useless files

--- a/FinalNotebook.ipynb
+++ b/FinalNotebook.ipynb
@@ -4768,7 +4768,8 @@
     "\n",
     "Until next time,\n",
     "\n",
-    "Francesco Danese, Benjamin Barda, Yusupha Juwara"
+    "Francesco Danese, Benjamin Barda, Yusupha Juwara\n",
+    "<br><br><br>"
    ]
   },
   {
@@ -4777,7 +4778,7 @@
    "metadata": {},
    "source": [
     "# 8 - Extra code\n",
-    "## Models implementation made by us, from scratch.\n"
+    "## Models implementation made by us, from scratch."
    ]
   },
   {
